--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "motion": "^12.19.2",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
